Note that this file only includes changes since Ice 3.2.1. For the
change history of prior releases, refer to the CHANGES file in the
subdirectory of each language mapping (e.g., cpp/CHANGES).


======================================================================
Changes since version 3.4.2
======================================================================


General Changes
===============

- Improved Ice.Trace.Network tracing for transport acceptors. The
  tracing now shows when the object adapter starts listening for
  incoming connections and when it starts accepting them.

- Improved IceStorm batch subscriber sending to wait for the batch to
  be sent before sending another batch.

- Added a new "compact" encoding for Slice classes and exceptions.
  This format significantly reduces the "on-the-wire" size of class
  and exception instances, but sacrifices the ability for the receiver
  to "slice" an unknown derived type to a known type. The compact
  format is now the default encoding. Applications can selectively
  enable the traditional "sliced" format using metadata and the
  property Ice.Default.SlicedFormat.

- When using the "sliced" format for Slice classes and exceptions,
  Ice now has the ability to preserve the slices of unknown derived
  types and forward the original value intact. This allows an
  intermediary without knowledge of all derived types to forward a
  value while retaining the slices of unknown types. Types must be
  annotated with the "preserve-slice" metadata to support this
  feature.

- Added support for optional data members in classes and exceptions,
  and optional parameters in operations.

- The changes necessary to support the compact encoding, preserved
  slices, and optional members and parameters required a revision
  to the Ice encoding. The default encoding version is now 1.1. Ice
  remains fully backward-compatible with existing applications that
  use version 1.0 of the Ice encoding, however these new features